==> PatrykFryza/RadioDisplay/libs/rf/nRF24.c <==
#include "main.h"
#include "nRF24.h"
#include "nRF24_Defs.h"
#define NRF24_CSN_HIGH	LL_GPIO_SetOutputPin(NRF24_CSN_GPIO_PORT, NRF24_CSN_PIN);
#define NRF24_CSN_LOW		LL_GPIO_ResetOutputPin(NRF24_CSN_GPIO_PORT, NRF24_CSN_PIN);
#define NRF24_CE_HIGH		LL_GPIO_SetOutputPin(NRF24_CE_GPIO_PORT, NRF24_CE_PIN);
#define NRF24_CE_LOW		LL_GPIO_ResetOutputPin(NRF24_CE_GPIO_PORT, NRF24_CE_PIN);

static void nRF24_Delay_ms(uint8_t Time){
	LL_mDelay(Time);
}

static void nRF24_SendSpi(uint8_t *Data, uint8_t Length){
	for(int i = 0; i < Length; ++i){
		while(!LL_SPI_IsActiveFlag_TXE(NRF24_SPI));
		LL_SPI_TransmitData8(NRF24_SPI, Data[i]);
	}
	while(!LL_SPI_IsActiveFlag_TXE(NRF24_SPI));
	while(LL_SPI_IsActiveFlag_BSY(NRF24_SPI));
	LL_SPI_ClearFlag_OVR(NRF24_SPI);
}

static void nRF24_ReadSpi(uint8_t *Data, uint8_t Length){
	for(int i = 0; i < Length; ++i){
		while(!LL_SPI_IsActiveFlag_TXE(NRF24_SPI));
		LL_SPI_TransmitData8(SPI1, DUMMY_BYTE);
		while(!LL_SPI_IsActiveFlag_RXNE(SPI1));
		Data[i] =  LL_SPI_ReceiveData8(SPI1);
	}
	while(!LL_SPI_IsActiveFlag_TXE(NRF24_SPI));
	while(LL_SPI_IsActiveFlag_BSY(SPI1));
	LL_SPI_ClearFlag_OVR(SPI1);
}
