==> jkaniuka/PMIK_22L_Kaniuka_Krasnodebski/pilot/Core/Src/nRF24/nRF24.c <==
#include "main.h"
#include "spi.h"
#include "nRF24/nRF24.h"
#include "nRF24/nRF24_Defs.h"
#include "ring_buffer.h"
#define NRF24_CSN_HIGH		HAL_GPIO_WritePin(NRF24_CSN_GPIO_Port, NRF24_CSN_Pin, GPIO_PIN_SET)
#define NRF24_CSN_LOW		HAL_GPIO_WritePin(NRF24_CSN_GPIO_Port, NRF24_CSN_Pin, GPIO_PIN_RESET)
#define NRF24_CE_HIGH		HAL_GPIO_WritePin(NRF24_CE_GPIO_Port, NRF24_CE_Pin, GPIO_PIN_SET)
#define NRF24_CE_LOW		HAL_GPIO_WritePin(NRF24_CE_GPIO_Port, NRF24_CE_Pin, GPIO_PIN_RESET)

static void nRF24_Delay_ms(uint8_t Time)
{
	HAL_Delay(Time);
}

static void nRF24_SendSpi(uint8_t *Data, uint8_t Length)
{
	HAL_SPI_Transmit(hspi_nrf, Data, Length, 1000);
}

static void nRF24_ReadSpi(uint8_t *Data, uint8_t Length)
{
	HAL_SPI_Receive(hspi_nrf, Data, Length, 1000);
}
